--- a/package.json
+++ b/package.json
@@ -30,14 +30,23 @@
     "degree": "~1.1.1",
     "dispatch-event": "~1.0.0",
     "dom-walk": "~0.1.1",
+    "html-to-vdom": "~0.7.0",
+    "insert-styles": "~1.2.1",
+    "json-markup": "~0.1.7",
     "observ-array": "~3.2.1",
     "raf": "~2.0.4",
     "standard": "^7.0.0",
     "tape": "^4.0.0",
-    "thermometer": "~1.4.0"
+    "thermometer": "~1.4.0",
+    "virtual-widget": "~1.3.0"
   },
   "files": [
-    "*.js"
+    "index.js",
+    "number.js",
+    "expiration.js",
+    "cvc.js",
+    "*-test.js",
+    "example.js"
   ],
   "dependencies": {
     "ap": "~0.2.0",
