--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "example.js"
   ],
   "dependencies": {
-    "ap": "~0.2.0",
-    "creditcards": "~3.0.1",
+    "creditcards": "^3.1.0",
+    "creditcards-types": "^2.1.0",
     "dover": "^1.2.0",
     "is-android": "~1.0.1",
     "numeric-pattern": "~1.0.0",
